SuperBGenerated/SuperBParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\hcump\source\repos\SuperB\SuperB\SuperB.g4 by ANTLR 4.6.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace SuperB {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.5")]
[System.CLSCompliant(false)]
public partial class SuperBParser : Parser {
	public const int
		Refer=1, Implic=2, Local=3, Dimension=4, DefProc=5, DefFunc=6, EndDef=7, 
		If=8, Else=9, Then=10, EndIf=11, Select=12, EndSelect=13, On=14, For=15, 
		Next=16, To=17, EndFor=18, Step=19, Repeat=20, Exit=21, Until=22, EndRepeat=23, 
		LeftParen=24, RightParen=25, LeftBracket=26, RightBracket=27, Equal=28, 
		NotEqual=29, Less=30, LessEqual=31, Greater=32, GreaterEqual=33, Plus=34, 
		Minus=35, Multiply=36, Divide=37, Mod=38, Div=39, And=40, Or=41, Xor=42, 
		Caret=43, Not=44, Tilde=45, Instr=46, Amp=47, Question=48, Colon=49, Semi=50, 
		Comma=51, Point=52, Bang=53, Whitespace=54, Let=55, Newline=56, String=57, 
		Comment=58, ID=59, Integer=60, Real=61, Unknowntype=62, Void=63, Scalar=64, 
		LineNumber=65;
	public const int
		RULE_program = 0, RULE_line = 1, RULE_stmtlist = 2, RULE_constexpr = 3, 
		RULE_rangeexpr = 4, RULE_stmt = 5, RULE_prochdr = 6, RULE_funchdr = 7, 
		RULE_identifier = 8, RULE_parenthesizedlist = 9, RULE_unparenthesizedlist = 10, 
		RULE_separator = 11, RULE_expr = 12;
	public static readonly string[] ruleNames = {
		"program", "line", "stmtlist", "constexpr", "rangeexpr", "stmt", "prochdr", 
		"funchdr", "identifier", "parenthesizedlist", "unparenthesizedlist", "separator", 
		"expr"
	};

	private static readonly string[] _LiteralNames = {
		null, "'REFERENCE'", null, "'LOCal'", "'DIM'", "'DEFine PROCedure'", "'DEFine FuNction'", 
		"'END DEFine'", "'IF'", "'ELSE'", "'THEN'", "'END IF'", "'SELect ON'", 
		"'END SELect'", "'ON'", "'FOR'", "'NEXT'", "'TO'", "'END FOR'", "'STEP'", 
		"'REPeat'", "'EXIT'", "'UNTIL'", "'END REPeat'", "'('", "')'", "'['", 
		"']'", "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", 
		"'/'", "'MOD'", "'DIV'", "'AND'", "'OR'", "'XOR'", "'^'", "'NOT'", "'~'", 
		"'INSTR'", "'&'", "'?'", "':'", "';'", "','", "'.'", "'!'", null, "'LET'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Refer", "Implic", "Local", "Dimension", "DefProc", "DefFunc", "EndDef", 
		"If", "Else", "Then", "EndIf", "Select", "EndSelect", "On", "For", "Next", 
		"To", "EndFor", "Step", "Repeat", "Exit", "Until", "EndRepeat", "LeftParen", 
		"RightParen", "LeftBracket", "RightBracket", "Equal", "NotEqual", "Less", 
		"LessEqual", "Greater", "GreaterEqual", "Plus", "Minus", "Multiply", "Divide", 
		"Mod", "Div", "And", "Or", "Xor", "Caret", "Not", "Tilde", "Instr", "Amp", 
		"Question", "Colon", "Semi", "Comma", "Point", "Bang", "Whitespace", "Let", 
		"Newline", "String", "Comment", "ID", "Integer", "Real", "Unknowntype", 
		"Void", "Scalar", "LineNumber"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SuperB.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public SuperBParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(SuperBParser.Eof, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 27;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 26; line();
				}
				}
				State = 29;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Refer) | (1L << Implic) | (1L << Local) | (1L << Dimension) | (1L << DefProc) | (1L << DefFunc) | (1L << If) | (1L << Select) | (1L << On) | (1L << For) | (1L << Repeat) | (1L << Exit) | (1L << Newline) | (1L << ID) | (1L << Integer))) != 0) );
			State = 31; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public ITerminalNode Newline() { return GetToken(SuperBParser.Newline, 0); }
		public ITerminalNode Integer() { return GetToken(SuperBParser.Integer, 0); }
		public StmtlistContext stmtlist() {
			return GetRuleContext<StmtlistContext>(0);
		}
		public ITerminalNode Colon() { return GetToken(SuperBParser.Colon, 0); }
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			State = 43;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 34;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==Integer) {
					{
					State = 33; Match(Integer);
					}
				}

				State = 37;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Refer) | (1L << Implic) | (1L << Local) | (1L << Dimension) | (1L << DefProc) | (1L << DefFunc) | (1L << If) | (1L << Select) | (1L << On) | (1L << For) | (1L << Repeat) | (1L << Exit) | (1L << ID))) != 0)) {
					{
					State = 36; stmtlist();
					}
				}

				State = 39; Match(Newline);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 40; Match(Integer);
				State = 41; Match(Colon);
				State = 42; Match(Newline);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtlistContext : ParserRuleContext {
		public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public StmtlistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtlist; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtlist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtlistContext stmtlist() {
		StmtlistContext _localctx = new StmtlistContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_stmtlist);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 45; stmt();
			State = 50;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 46; Match(Colon);
					State = 47; stmt();
					}
					} 
				}
				State = 52;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstexprContext : ParserRuleContext {
		public ITerminalNode Integer() { return GetToken(SuperBParser.Integer, 0); }
		public ITerminalNode Real() { return GetToken(SuperBParser.Real, 0); }
		public ITerminalNode String() { return GetToken(SuperBParser.String, 0); }
		public ITerminalNode ID() { return GetToken(SuperBParser.ID, 0); }
		public ConstexprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constexpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstexpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstexprContext constexpr() {
		ConstexprContext _localctx = new ConstexprContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_constexpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << String) | (1L << ID) | (1L << Integer) | (1L << Real))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RangeexprContext : ParserRuleContext {
		public ConstexprContext[] constexpr() {
			return GetRuleContexts<ConstexprContext>();
		}
		public ConstexprContext constexpr(int i) {
			return GetRuleContext<ConstexprContext>(i);
		}
		public ITerminalNode To() { return GetToken(SuperBParser.To, 0); }
		public RangeexprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rangeexpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRangeexpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RangeexprContext rangeexpr() {
		RangeexprContext _localctx = new RangeexprContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_rangeexpr);
		try {
			State = 60;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 55; constexpr();
				State = 56; Match(To);
				State = 57; constexpr();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 59; constexpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtContext : ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt; } }
	 
		public StmtContext() { }
		public virtual void CopyFrom(StmtContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LocContext : StmtContext {
		public ITerminalNode Local() { return GetToken(SuperBParser.Local, 0); }
		public UnparenthesizedlistContext unparenthesizedlist() {
			return GetRuleContext<UnparenthesizedlistContext>(0);
		}
		public LocContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoc(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LongselectContext : StmtContext {
		public ITerminalNode Select() { return GetToken(SuperBParser.Select, 0); }
		public ConstexprContext constexpr() {
			return GetRuleContext<ConstexprContext>(0);
		}
		public ITerminalNode Newline() { return GetToken(SuperBParser.Newline, 0); }
		public ITerminalNode EndSelect() { return GetToken(SuperBParser.EndSelect, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ITerminalNode Integer() { return GetToken(SuperBParser.Integer, 0); }
		public LongselectContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLongselect(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExitstmtContext : StmtContext {
		public ITerminalNode Exit() { return GetToken(SuperBParser.Exit, 0); }
		public ITerminalNode ID() { return GetToken(SuperBParser.ID, 0); }
		public ExitstmtContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExitstmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FuncContext : StmtContext {
		public FunchdrContext funchdr() {
			return GetRuleContext<FunchdrContext>(0);
		}
		public ITerminalNode EndDef() { return GetToken(SuperBParser.EndDef, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ITerminalNode Integer() { return GetToken(SuperBParser.Integer, 0); }
		public ITerminalNode ID() { return GetToken(SuperBParser.ID, 0); }
		public FuncContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunc(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ReferenceContext : StmtContext {
		public ITerminalNode Refer() { return GetToken(SuperBParser.Refer, 0); }
		public UnparenthesizedlistContext unparenthesizedlist() {
			return GetRuleContext<UnparenthesizedlistContext>(0);
		}
		public ReferenceContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReference(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DimContext : StmtContext {
		public ITerminalNode Dimension() { return GetToken(SuperBParser.Dimension, 0); }
		public ITerminalNode ID() { return GetToken(SuperBParser.ID, 0); }
		public ParenthesizedlistContext parenthesizedlist() {
			return GetRuleContext<ParenthesizedlistContext>(0);
		}
		public DimContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDim(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LongforContext : StmtContext {
		public ITerminalNode For() { return GetToken(SuperBParser.For, 0); }
		public ITerminalNode[] ID() { return GetTokens(SuperBParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(SuperBParser.ID, i);
		}
		public ITerminalNode Equal() { return GetToken(SuperBParser.Equal, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode To() { return GetToken(SuperBParser.To, 0); }
		public ITerminalNode Newline() { return GetToken(SuperBParser.Newline, 0); }
		public ITerminalNode EndFor() { return GetToken(SuperBParser.EndFor, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ITerminalNode Integer() { return GetToken(SuperBParser.Integer, 0); }
		public LongforContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLongfor(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ProcContext : StmtContext {
		public ProchdrContext prochdr() {
			return GetRuleContext<ProchdrContext>(0);
		}
		public ITerminalNode EndDef() { return GetToken(SuperBParser.EndDef, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ITerminalNode Integer() { return GetToken(SuperBParser.Integer, 0); }
		public ITerminalNode ID() { return GetToken(SuperBParser.ID, 0); }
		public ProcContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProc(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignmentContext : StmtContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode Equal() { return GetToken(SuperBParser.Equal, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public AssignmentContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OnselectContext : StmtContext {
		public ITerminalNode On() { return GetToken(SuperBParser.On, 0); }
		public ITerminalNode Equal() { return GetToken(SuperBParser.Equal, 0); }
		public RangeexprContext rangeexpr() {
			return GetRuleContext<RangeexprContext>(0);
		}
		public ConstexprContext constexpr() {
			return GetRuleContext<ConstexprContext>(0);
		}
		public OnselectContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOnselect(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ShortifContext : StmtContext {
		public ITerminalNode If() { return GetToken(SuperBParser.If, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StmtlistContext[] stmtlist() {
			return GetRuleContexts<StmtlistContext>();
		}
		public StmtlistContext stmtlist(int i) {
			return GetRuleContext<StmtlistContext>(i);
		}
		public ITerminalNode Then() { return GetToken(SuperBParser.Then, 0); }
		public ITerminalNode[] Colon() { return GetTokens(SuperBParser.Colon); }
		public ITerminalNode Colon(int i) {
			return GetToken(SuperBParser.Colon, i);
		}
		public ITerminalNode Else() { return GetToken(SuperBParser.Else, 0); }
		public ShortifContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShortif(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LongifContext : StmtContext {
		public ITerminalNode If() { return GetToken(SuperBParser.If, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode Newline() { return GetToken(SuperBParser.Newline, 0); }
		public ITerminalNode EndIf() { return GetToken(SuperBParser.EndIf, 0); }
		public ITerminalNode Then() { return GetToken(SuperBParser.Then, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ITerminalNode Else() { return GetToken(SuperBParser.Else, 0); }
		public ITerminalNode[] Integer() { return GetTokens(SuperBParser.Integer); }
		public ITerminalNode Integer(int i) {
			return GetToken(SuperBParser.Integer, i);
		}
		public LongifContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLongif(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IdentifierOnlyContext : StmtContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public IdentifierOnlyContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifierOnly(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ShortrepeatContext : StmtContext {
		public ITerminalNode Repeat() { return GetToken(SuperBParser.Repeat, 0); }
		public ITerminalNode ID() { return GetToken(SuperBParser.ID, 0); }
		public ITerminalNode Colon() { return GetToken(SuperBParser.Colon, 0); }
		public StmtlistContext stmtlist() {
			return GetRuleContext<StmtlistContext>(0);
		}
		public ShortrepeatContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShortrepeat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ImplicitContext : StmtContext {
		public ITerminalNode Implic() { return GetToken(SuperBParser.Implic, 0); }
		public UnparenthesizedlistContext unparenthesizedlist() {
			return GetRuleContext<UnparenthesizedlistContext>(0);
		}
		public ImplicitContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImplicit(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ShortforContext : StmtContext {
		public ITerminalNode For() { return GetToken(SuperBParser.For, 0); }
		public ITerminalNode ID() { return GetToken(SuperBParser.ID, 0); }
		public ITerminalNode Equal() { return GetToken(SuperBParser.Equal, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode To() { return GetToken(SuperBParser.To, 0); }
		public ITerminalNode Colon() { return GetToken(SuperBParser.Colon, 0); }
		public StmtlistContext stmtlist() {
			return GetRuleContext<StmtlistContext>(0);
		}
		public ShortforContext(StmtContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISuperBVisitor<TResult> typedVisitor = visitor as ISuperBVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShortfor(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LongrepeatContext : StmtContext {
		public ITerminalNode Repeat() { return GetToken(SuperBParser.Repeat, 0); }
		public ITerminalNode[] ID() { return GetTokens(SuperBParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(SuperBParser.ID, i);
		}
		public ITerminalNode Newline() { return GetToken(SuperBParser.Newline, 0); }
		public ITerminalNode EndRepeat() { return GetToken(SuperBParser.EndRepeat, 0); }
		public LineContext[] line() {
